[package]
name = "rustprazi"
version = "0.1.0"
authors = ["Joseph Hejderup <joseph.hejderup@gmail.com>", "Mortiz Beller <moritzbeller@gmx.de>", "Georgios Gousios <gousiosg@gmail.com>"]


[[bin]]
name = "rustprazi"
path = "src/bin/prazi.rs"

[[bin]]
name = "ufi"
path = "src/bin/ufi.rs"

[dependencies]
cargo = "0.31.0"
clap = "2.32.0"
crates-index = "0.12.0"
filebuffer = "0.4.0"
flate2 = "1.0.4"
futures = "0.1.25"
glob = "0.2.11"
lazy_static = "1.2.0"
quote = "0.4.2"
rayon = "1.0"
regex = "1.0.6"
reqwest = "0.9.5"
rust-ini = "0.13"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
syn = {git = "https://github.com/jhejderup/syn", features = ["parsing", "printing", "clone-impls", "full", "extra-traits", "visit", "visit-mut"]}
tar = "0.4.20"
tokio-core = "0.1.17"
